Fixing too much space around p.

--- a/styles.css
+++ b/styles.css
@@ -226,7 +226,7 @@ img:active {
 @media only screen and (min-width: 1200px) {
 
   body {
-     padding: 9%;
+     padding: 7.5% 9%;
   }
 	
   p {
